chore: fix build
Signed-off-by: Naydenov <nikola.naydenov@limechain.tech>